[gd_scene load_steps=5 format=3 uid="uid://6pbudmum5dat"]

[ext_resource type="Script" path="res://scenes/ui/start_screen.gd" id="1_icddk"]
[ext_resource type="Script" path="res://scenes/ui/hoverable_button.gd" id="1_ml0j7"]
[ext_resource type="PackedScene" uid="uid://dxnsbnm55ur2p" path="res://scenes/ui/volume_menu.tscn" id="2_ggp0y"]
[ext_resource type="AudioStream" uid="uid://bkiin45pvewk1" path="res://assets/Music/28 Rare Blocks.wav" id="4_q6kqt"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_icddk")
volume_menu_scene = ExtResource("2_ggp0y")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219608, 0.372549, 0.380392, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Survive The Semester"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Start"
script = ExtResource("1_ml0j7")

[node name="OptionsButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"
script = ExtResource("1_ml0j7")

[node name="VolumeButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Volume"
script = ExtResource("1_ml0j7")

[node name="QuitButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"
script = ExtResource("1_ml0j7")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_q6kqt")
volume_db = -13.173
autoplay = true
bus = &"Music"
